hphp/hack/test/sound_dynamic/typing/check_sdt_meth.bad.php.exp
File "check_sdt_meth.bad.php", line 15, characters 14-32:
Method  `g` in class `C` is not dynamically callable. (Typing[4105])
  File "check_sdt_meth.bad.php", line 15, characters 14-32:
  Too many arguments (expected 1 but got 2)
  File "check_sdt_meth.bad.php", line 5, characters 19-19:
  Definition is here
File "check_sdt_meth.bad.php", line 15, characters 14-32:
Too many arguments (expected 1 but got 2) (Typing[4105])
  File "check_sdt_meth.bad.php", line 5, characters 19-19:
  Definition is here
